--- a/index.html
+++ b/index.html
@@ -6,28 +6,34 @@
     <title>Matrix Multiplication Demo Visualization</title>
     <style>
       :root {
-        --bg-main: #0e1116;
-        --bg-main-2: #151a22;
-        --bg-surface: rgba(22, 27, 36, 0.9);
-        --bg-surface-strong: rgba(18, 23, 31, 0.96);
-        --bg-input: #141a23;
-        --text-main: #f3f5f8;
-        --text-soft: #b4bdca;
-        --stroke: rgba(255, 255, 255, 0.12);
-        --accent: #cdd8eb;
-        --radius: 10px;
+        --bg-main: #080d14;
+        --bg-main-2: #111b2a;
+        --bg-surface: rgba(16, 24, 36, 0.84);
+        --bg-surface-strong: rgba(12, 19, 30, 0.95);
+        --bg-input: rgba(11, 18, 29, 0.95);
+        --text-main: #f3f7ff;
+        --text-soft: #a7b8d3;
+        --stroke: rgba(164, 194, 235, 0.26);
+        --stroke-soft: rgba(165, 195, 235, 0.16);
+        --accent: #8fc3ff;
+        --accent-strong: #6aa8f2;
+        --shadow-soft: 0 12px 36px rgba(0, 0, 0, 0.38);
+        --shadow-strong: 0 18px 54px rgba(0, 0, 0, 0.48);
+        --radius: 12px;
       }
 
       html,
       body {
+        color-scheme: dark;
         margin: 0;
         height: 100%;
         overflow: hidden;
         background:
-          radial-gradient(circle at 14% 12%, #232b39 0%, rgba(35, 43, 57, 0) 34%),
-          linear-gradient(130deg, var(--bg-main) 0%, var(--bg-main-2) 100%);
+          radial-gradient(circle at 12% 14%, rgba(91, 124, 173, 0.28) 0%, rgba(91, 124, 173, 0) 36%),
+          radial-gradient(circle at 86% 8%, rgba(112, 163, 201, 0.2) 0%, rgba(112, 163, 201, 0) 32%),
+          linear-gradient(138deg, var(--bg-main) 0%, var(--bg-main-2) 100%);
         color: var(--text-main);
-        font-family: "Segoe UI", "Aptos", Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI Variable", "Aptos", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
 
       #app {
@@ -44,11 +50,14 @@
         padding: 10px 11px;
         border-radius: var(--radius);
         border: 1px solid var(--stroke);
-        background: var(--bg-surface);
-        backdrop-filter: blur(6px);
+        background:
+          linear-gradient(165deg, rgba(27, 40, 58, 0.72), rgba(14, 22, 34, 0.9)),
+          var(--bg-surface);
+        backdrop-filter: blur(12px);
         font-size: 12px;
         line-height: 1.4;
         color: var(--text-soft);
+        box-shadow: var(--shadow-soft);
       }
 
       .controls {
@@ -59,11 +68,14 @@
         padding: 9px;
         border-radius: var(--radius);
         border: 1px solid var(--stroke);
-        background: var(--bg-surface);
-        backdrop-filter: blur(6px);
+        background:
+          linear-gradient(165deg, rgba(28, 40, 58, 0.72), rgba(13, 21, 33, 0.92)),
+          var(--bg-surface);
+        backdrop-filter: blur(12px);
         display: flex;
         flex-direction: column;
         gap: 7px;
+        box-shadow: var(--shadow-soft);
       }
 
       .control-row {
@@ -81,30 +93,43 @@
       }
 
       button {
-        background: rgba(255, 255, 255, 0.06);
+        background:
+          linear-gradient(180deg, rgba(142, 185, 240, 0.16), rgba(100, 149, 207, 0.12)),
+          rgba(255, 255, 255, 0.04);
         color: var(--text-main);
         border: 1px solid var(--stroke);
         border-radius: 8px;
-        padding: 6px 10px;
+        padding: 7px 11px;
         cursor: pointer;
         font-weight: 600;
-        transition: border-color 0.15s ease, background 0.15s ease, transform 0.15s ease;
+        letter-spacing: 0.01em;
+        transition: border-color 0.15s ease, background 0.15s ease, transform 0.15s ease, box-shadow 0.15s ease;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.18);
       }
 
       button:hover {
-        border-color: rgba(255, 255, 255, 0.24);
-        background: rgba(255, 255, 255, 0.1);
+        border-color: rgba(176, 209, 247, 0.62);
+        background:
+          linear-gradient(180deg, rgba(157, 199, 248, 0.24), rgba(108, 159, 222, 0.16)),
+          rgba(255, 255, 255, 0.06);
+        box-shadow: 0 6px 16px rgba(14, 26, 44, 0.42);
       }
 
       button:active {
         transform: translateY(1px);
       }
 
+      button:disabled {
+        opacity: 0.46;
+        cursor: not-allowed;
+        box-shadow: none;
+      }
+
       button:focus-visible,
       .matrix-grid input:focus-visible,
       .matrix-actions input:focus-visible,
       .matrix-actions select:focus-visible {
-        outline: 2px solid rgba(220, 233, 255, 0.55);
+        outline: 2px solid rgba(147, 198, 255, 0.76);
         outline-offset: 1px;
       }
 
@@ -121,14 +146,15 @@
       }
 
       .panel-toggle[data-active="true"] {
-        background: rgba(220, 233, 255, 0.2);
-        border-color: rgba(220, 233, 255, 0.45);
+        background: linear-gradient(180deg, rgba(144, 194, 252, 0.3), rgba(98, 149, 219, 0.16));
+        border-color: rgba(167, 208, 255, 0.68);
+        color: #f7fbff;
       }
 
       .panel-toggle[data-active="false"] {
-        background: rgba(12, 16, 23, 0.85);
-        color: #94a2ba;
-        border-color: rgba(255, 255, 255, 0.08);
+        background: rgba(10, 16, 25, 0.9);
+        color: #95a7c3;
+        border-color: var(--stroke-soft);
       }
 
       .hidden {
@@ -145,11 +171,13 @@
         padding: 9px;
         border-radius: 12px;
         border: 1px solid var(--stroke);
-        background: var(--bg-surface-strong);
-        backdrop-filter: blur(8px);
+        background:
+          linear-gradient(160deg, rgba(29, 41, 59, 0.66), rgba(12, 18, 29, 0.94)),
+          var(--bg-surface-strong);
+        backdrop-filter: blur(14px);
         font-size: 12px;
         z-index: 20;
-        box-shadow: 0 8px 26px rgba(0, 0, 0, 0.32);
+        box-shadow: var(--shadow-strong);
       }
 
       .math-panel {
@@ -162,11 +190,13 @@
         padding: 9px;
         border-radius: 12px;
         border: 1px solid var(--stroke);
-        background: var(--bg-surface-strong);
-        backdrop-filter: blur(8px);
+        background:
+          linear-gradient(160deg, rgba(29, 41, 59, 0.66), rgba(12, 18, 29, 0.94)),
+          var(--bg-surface-strong);
+        backdrop-filter: blur(14px);
         font-size: 12px;
         z-index: 20;
-        box-shadow: 0 8px 26px rgba(0, 0, 0, 0.32);
+        box-shadow: var(--shadow-strong);
       }
 
       .current-state-panel {
@@ -179,11 +209,13 @@
         padding: 9px;
         border-radius: 12px;
         border: 1px solid var(--stroke);
-        background: var(--bg-surface-strong);
-        backdrop-filter: blur(8px);
+        background:
+          linear-gradient(160deg, rgba(29, 41, 59, 0.66), rgba(12, 18, 29, 0.94)),
+          var(--bg-surface-strong);
+        backdrop-filter: blur(14px);
         font-size: 12px;
         z-index: 20;
-        box-shadow: 0 8px 26px rgba(0, 0, 0, 0.32);
+        box-shadow: var(--shadow-strong);
       }
 
       .current-state-panel::-webkit-scrollbar {
@@ -192,7 +224,7 @@
 
       .current-state-panel::-webkit-scrollbar-thumb {
         border-radius: 999px;
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(163, 197, 238, 0.35);
       }
 
       .math-panel::-webkit-scrollbar {
@@ -201,7 +233,7 @@
 
       .math-panel::-webkit-scrollbar-thumb {
         border-radius: 999px;
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(163, 197, 238, 0.35);
       }
 
       .matrix-panel::-webkit-scrollbar {
@@ -210,15 +242,15 @@
 
       .matrix-panel::-webkit-scrollbar-thumb {
         border-radius: 999px;
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(163, 197, 238, 0.35);
       }
 
       .panel-section {
         margin-bottom: 8px;
         padding: 9px;
-        border: 1px solid rgba(255, 255, 255, 0.08);
+        border: 1px solid var(--stroke-soft);
         border-radius: 9px;
-        background: rgba(255, 255, 255, 0.03);
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0.045), rgba(255, 255, 255, 0.02));
       }
 
       .matrix-panel h3 {
@@ -266,7 +298,7 @@
       .matrix-grid input {
         width: 100%;
         height: 30px;
-        border: 1px solid rgba(255, 255, 255, 0.16);
+        border: 1px solid rgba(171, 204, 243, 0.32);
         border-radius: 7px;
         background: var(--bg-input);
         color: #eef4ff;
@@ -274,6 +306,7 @@
         box-sizing: border-box;
         font-family: Consolas, "Courier New", monospace;
         font-size: 12px;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.03);
       }
 
       .col-x {
@@ -322,11 +355,12 @@
       .matrix-actions input,
       .matrix-actions select {
         height: 30px;
-        border: 1px solid rgba(255, 255, 255, 0.16);
+        border: 1px solid rgba(171, 204, 243, 0.32);
         border-radius: 7px;
         background: var(--bg-input);
         color: #ebf0fb;
         padding: 4px 6px;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.03);
       }
 
       .matrix-status {
@@ -337,9 +371,9 @@
 
       .operation-output {
         margin-top: 8px;
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid var(--stroke-soft);
         border-radius: 7px;
-        background: rgba(0, 0, 0, 0.14);
+        background: rgba(8, 14, 22, 0.55);
       }
 
       .operation-output h3 {
@@ -370,9 +404,9 @@
 
       .chain-output {
         margin-bottom: 8px;
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid var(--stroke-soft);
         border-radius: 7px;
-        background: rgba(0, 0, 0, 0.14);
+        background: rgba(8, 14, 22, 0.52);
       }
 
       .chain-output pre {
@@ -390,9 +424,9 @@
 
       .applied-item {
         margin-bottom: 6px;
-        border: 1px solid rgba(255, 255, 255, 0.12);
+        border: 1px solid var(--stroke-soft);
         border-radius: 7px;
-        background: rgba(0, 0, 0, 0.12);
+        background: rgba(11, 18, 29, 0.5);
       }
 
       .applied-item summary {
@@ -482,8 +516,8 @@
       }
 
       .state-badge {
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        background: rgba(255, 255, 255, 0.06);
+        border: 1px solid rgba(157, 193, 236, 0.32);
+        background: rgba(143, 184, 236, 0.1);
         color: #d9e4f6;
         border-radius: 999px;
         padding: 3px 8px;
@@ -517,7 +551,7 @@
 
       .state-matrix th,
       .state-matrix td {
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid var(--stroke-soft);
         padding: 4px 6px;
         text-align: center;
       }
@@ -534,9 +568,9 @@
       }
 
       .math-card {
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid var(--stroke-soft);
         border-radius: 9px;
-        background: rgba(255, 255, 255, 0.03);
+        background: rgba(255, 255, 255, 0.028);
         padding: 8px;
         margin-bottom: 8px;
       }
@@ -598,10 +632,10 @@
       }
 
       .math-anim-mat {
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid var(--stroke-soft);
         border-radius: 8px;
         padding: 6px;
-        background: rgba(255, 255, 255, 0.02);
+        background: rgba(255, 255, 255, 0.025);
       }
 
       .math-anim-mat-title {
@@ -632,13 +666,13 @@
       }
 
       .math-dot-term {
-        border: 1px solid rgba(255, 255, 255, 0.12);
+        border: 1px solid var(--stroke-soft);
         border-radius: 999px;
         padding: 2px 8px;
         font-family: Consolas, "Courier New", monospace;
         font-size: 11px;
         color: #d8e3f7;
-        background: rgba(255, 255, 255, 0.03);
+        background: rgba(255, 255, 255, 0.028);
       }
 
       .math-dot-term-active {
@@ -695,10 +729,10 @@
       }
 
       .axis-control {
-        border: 1px solid rgba(255, 255, 255, 0.12);
+        border: 1px solid var(--stroke-soft);
         border-radius: 8px;
         padding: 6px;
-        background: rgba(255, 255, 255, 0.03);
+        background: rgba(255, 255, 255, 0.024);
       }
 
       .axis-control label {
@@ -711,7 +745,7 @@
       .axis-control input {
         width: 100%;
         height: 28px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
+        border: 1px solid rgba(171, 204, 243, 0.32);
         border-radius: 6px;
         background: #111722;
         color: #eef4ff;
@@ -719,6 +753,10 @@
         box-sizing: border-box;
         font-family: Consolas, "Courier New", monospace;
         font-size: 12px;
+      }
+
+      .math-anim-scrub input[type="range"] {
+        accent-color: var(--accent-strong);
       }
 
       .axis-control-x {
