--- a/index.html
+++ b/index.html
@@ -392,6 +392,38 @@
         font-family: Consolas, "Courier New", monospace;
       }
 
+      .viz-theta-card {
+        margin: 0 8px 8px;
+        padding: 8px;
+        border: 1px solid var(--stroke-soft);
+        border-radius: 8px;
+        background: rgba(255, 255, 255, 0.02);
+      }
+
+      .viz-theta-wrap {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .viz-theta-svg {
+        width: 112px;
+        height: 112px;
+        flex: 0 0 auto;
+      }
+
+      .viz-theta-meta {
+        font-size: 11px;
+        color: #d8e3f7;
+        line-height: 1.45;
+      }
+
+      .viz-theta-value {
+        font-size: 13px;
+        font-weight: 700;
+        color: #eef5ff;
+      }
+
       .applied-list {
         margin: 0;
       }
@@ -877,6 +909,22 @@
           <div class="matrix-actions">
             <button id="vizTrigToggle" type="button">Trig View: Off</button>
           </div>
+          <div id="vizThetaCard" class="viz-theta-card hidden">
+            <div class="viz-theta-wrap">
+              <svg id="vizThetaSvg" class="viz-theta-svg" viewBox="0 0 112 112" aria-label="Theta visualization">
+                <circle cx="56" cy="56" r="38" fill="none" stroke="rgba(255,255,255,0.14)" stroke-width="1.5"></circle>
+                <line id="vizThetaBase" x1="56" y1="56" x2="92" y2="56" stroke="#9aa8c2" stroke-width="2"></line>
+                <line id="vizThetaX" x1="56" y1="56" x2="92" y2="56" stroke="#ff8d8d" stroke-width="3"></line>
+                <line id="vizThetaY" x1="56" y1="56" x2="56" y2="20" stroke="#85e3a3" stroke-width="3"></line>
+                <path id="vizThetaArc" d="" fill="none" stroke="#8ebcff" stroke-width="2.5"></path>
+              </svg>
+              <div class="viz-theta-meta">
+                <div class="viz-theta-value" id="vizThetaValue">theta = 0 deg</div>
+                <div><span class="math-axis-x">X</span> and <span class="math-axis-y">Y</span> basis orientation</div>
+                <div>Arc shows the angle from world +X to current X axis.</div>
+              </div>
+            </div>
+          </div>
           <pre id="vizAxisText">origin = (0, 0)
 x_axis = (1, 0)
 y_axis = (0, 1)</pre>
@@ -1312,6 +1360,11 @@ y_axis = (0, 1)</pre>
       const vizAxisReadout = document.getElementById("vizAxisReadout");
       const vizTrigToggle = document.getElementById("vizTrigToggle");
       const vizAxisText = document.getElementById("vizAxisText");
+      const vizThetaCard = document.getElementById("vizThetaCard");
+      const vizThetaX = document.getElementById("vizThetaX");
+      const vizThetaY = document.getElementById("vizThetaY");
+      const vizThetaArc = document.getElementById("vizThetaArc");
+      const vizThetaValue = document.getElementById("vizThetaValue");
       const vizLabelOrigin = document.getElementById("vizLabelOrigin");
       const vizLabelX = document.getElementById("vizLabelX");
       const vizLabelY = document.getElementById("vizLabelY");
@@ -1969,42 +2022,51 @@ y_axis = (0, 1)</pre>
       }
 
       function updateVizAxisReadout(matrix) {
-        const { a, b, tx, c, d, ty } = get2DComponentsFromMatrix(matrix);
-        const xTipX = tx + a;
-        const xTipY = ty + c;
-        const yTipX = tx + b;
-        const yTipY = ty + d;
+        const { a, b, c, d } = get2DComponentsFromMatrix(matrix);
         if (vizTrigMode) {
-          const sx = Math.hypot(a, c);
-          const sy = Math.hypot(b, d);
           const theta = Math.atan2(c, a);
           const thetaDeg = (theta * 180) / Math.PI;
-          vizAxisText.textContent = `origin = (${formatValue(tx)}, ${formatValue(ty)})
-translation point = (${formatValue(tx)}, ${formatValue(ty)})
-x_tip (grid) = (${formatValue(xTipX)}, ${formatValue(xTipY)})
-y_tip (grid) = (${formatValue(yTipX)}, ${formatValue(yTipY)})
+          vizAxisText.classList.add("hidden");
+          vizThetaCard.classList.remove("hidden");
 
-theta = ${formatValue(thetaDeg)} deg (${formatValue(theta)} rad)
-sx = ${formatValue(sx)}, sy = ${formatValue(sy)}
+          const cx = 56;
+          const cy = 56;
+          const rAxis = 36;
+          const rArc = 25;
+          const xLen = Math.hypot(a, c) > 1e-8 ? rAxis : 0;
+          const yLen = Math.hypot(b, d) > 1e-8 ? rAxis : 0;
+          const xEndX = cx + xLen * Math.cos(theta);
+          const xEndY = cy - xLen * Math.sin(theta);
+          const yTheta = Math.atan2(d, b);
+          const yEndX = cx + yLen * Math.cos(yTheta);
+          const yEndY = cy - yLen * Math.sin(yTheta);
 
-2D basis (rotation/scale form):
-x_axis = sx * (cos(theta), sin(theta))
-y_axis = sy * (-sin(theta), cos(theta))
+          vizThetaX.setAttribute("x1", String(cx));
+          vizThetaX.setAttribute("y1", String(cy));
+          vizThetaX.setAttribute("x2", String(xEndX));
+          vizThetaX.setAttribute("y2", String(xEndY));
 
-expanded:
-a = sx*cos(theta) = ${formatValue(a)}
-b = -sy*sin(theta) = ${formatValue(b)}
-c = sx*sin(theta) = ${formatValue(c)}
-d = sy*cos(theta) = ${formatValue(d)}`;
+          vizThetaY.setAttribute("x1", String(cx));
+          vizThetaY.setAttribute("y1", String(cy));
+          vizThetaY.setAttribute("x2", String(yEndX));
+          vizThetaY.setAttribute("y2", String(yEndY));
+
+          const thetaNorm = Math.atan2(Math.sin(theta), Math.cos(theta));
+          const arcEndX = cx + rArc * Math.cos(thetaNorm);
+          const arcEndY = cy - rArc * Math.sin(thetaNorm);
+          const largeArc = Math.abs(thetaNorm) > Math.PI / 2 ? 1 : 0;
+          const sweep = thetaNorm >= 0 ? 0 : 1;
+          vizThetaArc.setAttribute(
+            "d",
+            `M ${cx + rArc} ${cy} A ${rArc} ${rArc} 0 ${largeArc} ${sweep} ${arcEndX} ${arcEndY}`
+          );
+          vizThetaValue.textContent = `theta = ${formatValue(thetaDeg)} deg`;
           return;
         }
-        vizAxisText.textContent = `origin = (${formatValue(tx)}, ${formatValue(ty)})
-x_axis = (${formatValue(a)}, ${formatValue(c)})
-y_axis = (${formatValue(b)}, ${formatValue(d)})
-
-translation point = (${formatValue(tx)}, ${formatValue(ty)})
-x_tip (grid) = (${formatValue(xTipX)}, ${formatValue(xTipY)})
-y_tip (grid) = (${formatValue(yTipX)}, ${formatValue(yTipY)})`;
+        vizThetaCard.classList.add("hidden");
+        vizAxisText.classList.remove("hidden");
+        vizAxisText.textContent = `x_axis = (${formatValue(a)}, ${formatValue(c)})
+y_axis = (${formatValue(b)}, ${formatValue(d)})`;
       }
 
       function setVizLabel(el, text, worldPos) {
@@ -2085,7 +2147,7 @@ y_tip (grid) = (${formatValue(yTipX)}, ${formatValue(yTipY)})`;
         const origin = new THREE.Vector3(tx, ty, 0);
         const xTip = new THREE.Vector3(tx + a, ty + c, 0);
         const yTip = new THREE.Vector3(tx + b, ty + d, 0);
-        setVizLabel(vizLabelOrigin, `O (${formatValue(tx)}, ${formatValue(ty)})`, origin);
+        setVizLabel(vizLabelOrigin, "O", origin);
         setVizLabel(vizLabelX, `X (${formatValue(xTip.x)}, ${formatValue(xTip.y)})`, xTip);
         setVizLabel(vizLabelY, `Y (${formatValue(yTip.x)}, ${formatValue(yTip.y)})`, yTip);
       }
@@ -2321,6 +2383,8 @@ cumulative T: ${formatVec3(entry.cumulativeTranslation)}</pre>
         const matrix = tryReadMatrixFromInputs();
         if (!matrix) {
           vizAxisText.textContent = "Invalid matrix input.";
+          vizThetaCard.classList.add("hidden");
+          vizAxisText.classList.remove("hidden");
           hideVizLabels();
           return;
         }
